<<<<<<< HEAD
<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, MainActivity!</string>
    <string name="app_name">QuestionTime</string>
    <string name="app_label">Zoeken</string>
    <string name="search_hint">Zoek vragen</string>
    <string name="placeholderText">Question Time</string>
    <string name="ListTitleText">Selecteer een leerling</string>
    <string name="searchString">Zoeken</string>
    <string name="vragenLijstString">Vragen Lijst</string>
    <string name="vragenSetLijstString">VragenSetLijst</string>
    <string name="leerlingenLijstString">Leerlingen Lijst</string>
    <string name="resultatenString">Resultaten Lijst</string>
    <string name="settingsString">Instellingen</string>
    <string name="vraag_edit_vraag">Vraag</string>
    <string name="vraag_edit_antwoord">Antwoord</string>
    <string name="vraag_edit_confirm">Bewaren</string>
    <string name="jouwVraagString">Jouw vraag ?</string>
    <string name="menu_delete">Delete Vraag</string>
    <string name="menu_refresh">Update van de lijst</string>
    <string name="emailString">email</string>
    <string name="passwordString">wachtwoord</string>
    <string name="classString">klas</string>
    <string name="loginString">Aanmelden</string>
    <string name="_loginscreen_title">Aanmeldscherm</string>
    <string name="_email">Email</string>
    <string name="_class">Klasid</string>
    <string name="_cancel">Annuleren</string>
    <string name="_login">Aanmelden</string>
    <string name="_password">Wachtwoord</string>
    <string name="_app_name">Login</string>
    <string name="_login_message">Gelieve email, wachtwoord en een klas in te geven</string>
    <string name="_error">Foute email/wachtwoord combinatie</string>
    <string name="_data_loading">Data ophalen</string>
    <string name="_loading">Laden</string>
    <string name="refresh">Refresh</string>
    <string name="push">Push</string>
    <string name="copy">Copy</string>
    <string name="bewaren">Bewaren</string>
    <string name="add">Toevoegen</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="JA">JA</string>
    <string name="NEE">NEE</string>
    <string name="jouwVraag">Jouw vraag ?</string>
    <string name="invulTextVraag">Invul text vraag ?</string>
    <string name="meerKeuzeVraag">Meer keuze vraag ?</string>
    <string name="jaNeeVraag">Ja/Nee vraag ?</string>
    <string name="eenVraag">Een vraag ?</string>
    <string name="firstname">Voornaam</string>
    <string name="name">Naam</string>
    <string name="editDataStudent">Gegevens leerlingen bewerken</string>
    <string name="sendDataStudent">Gegevens leerlingen verzenden</string>
    <string name="loginPasswordTeacher">Login/wachtwoord veranderen</string>
    <string name="afmelden">Afmelden</string>

=======
<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, MainActivity!</string>
    <string name="app_name">QuestionTime</string>
    <string name="placeholderText">Question Time</string>
    <string name="ListTitleText">Selecteer een leerling</string>
    <string name="searchString">Zoeken</string>
    <string name="vragenLijstString">Vragen Lijst</string>
    <string name="vragenSetLijstString">VragenSetLijst</string>
    <string name="leerlingenLijstString">Leerlingen Lijst</string>
    <string name="resultatenString">Resultaten Lijst</string>
    <string name="settingsString">Instellingen</string>
    <string name="vraag_edit_vraag">Vraag</string>
    <string name="vraag_edit_antwoord">Antwoord</string>
    <string name="vraag_edit_confirm">Bewaren</string>
    <string name="jouwVraagString">Jouw vraag ?</string>
    <string name="menu_delete">Delete Vraag</string>
    <string name="menu_refresh">Update van de lijst</string>
    <string name="emailString">email</string>
    <string name="passwordString">wachtwoord</string>
    <string name="classString">klas</string>
    <string name="loginString">Aanmelden</string>
    <string name="_loginscreen_title">Aanmeldscherm</string>
    <string name="_email">Email</string>
    <string name="_class">Klasid</string>
    <string name="_cancel">Annuleren</string>
    <string name="_login">Aanmelden</string>
    <string name="_password">Wachtwoord</string>
    <string name="_app_name">Login</string>
    <string name="_login_message">Gelieve email, wachtwoord en een klas in te geven</string>
    <string name="_error">Foute email/wachtwoord combinatie</string>
    <string name="_data_loading">Data ophalen</string>
    <string name="_loading">Laden</string>
    <string name="refresh">Herladen</string>
    <string name="push">&gt;</string>
    <string name="copy">Copy</string>
    <string name="bewaren">Bewaren</string>
    <string name="add">Toevoegen</string>
    <string name="one">A</string>
    <string name="two">B</string>
    <string name="three">C</string>
    <string name="four">D</string>
    <string name="five">E</string>
    <string name="JA">JA</string>
    <string name="NEE">NEE</string>
    <string name="jouwVraag">Jouw vraag:</string>
    <string name="invulTextVraag">Invul text vraag ?</string>
    <string name="meerKeuzeVraag">Meer keuze vraag ?</string>
    <string name="jaNeeVraag">Ja/Nee vraag ?</string>
    <string name="eenVraag">Een vraag ?</string>
    <string name="firstname">Voornaam</string>
    <string name="name">Naam</string>
    <string name="editDataStudent">Gegevens leerlingen bewerken</string>
    <string name="sendDataStudent">Gegevens leerlingen verzenden</string>
    <string name="loginPasswordTeacher">Login/wachtwoord veranderen</string>
    <string name="afmelden">Afmelden</string>
    <string name="serveradres">Serveradres instellen</string>

>>>>>>> origin/Anderson2
</resources>