<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="#9e9e9e"
        android:gravity="right" >

        <Button
            android:id="@+id/buttonBewaren"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#9e9e9e"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:onClick="saveTheQuestionOnCLick"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:shadowColor="#515151"
            android:shadowDx="1"
            android:shadowDy="1"
            android:shadowRadius="2"
            android:text="@string/bewaren"
            android:textColor="#FFFFFF"
            android:textSize="21dp" />

        <Button
            android:id="@+id/buttonCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:background="#9e9e9e"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:onClick="cancelTheQuestionOnCLick"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:shadowColor="#515151"
            android:shadowDx="1"
            android:shadowDy="1"
            android:shadowRadius="2"
            android:text="@string/_cancel"
            android:textColor="#FFFFFF"
            android:textSize="21dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:background="@drawable/background_dkgray"
        android:orientation="vertical" >
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/jouwVraag"
            android:textColor="@color/darkGreyColor"
            android:textSize="21dp" />

        <EditText
            android:id="@+id/editTextVraag"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@color/blueColor"
            android:ems="10"
            android:hint="@string/antwHint"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:padding="20dp"
            android:textColor="#ffffff"
            android:textSize="21dp" />

        <!-- android:hint="INPUT TEXT" -->
    </LinearLayout>

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="20dp"
        android:paddingRight="20dp" >

        <LinearLayout
            android:layout_width="20dp"
            android:layout_height="match_parent"
            android:background="@color/greyColor" >
        </LinearLayout>

        <RadioButton
            android:id="@+id/radioJaNee"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:background="@color/greyColor"
            android:checked="true"
            android:gravity="center|center_horizontal"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:shadowColor="#515151"
            android:shadowDx="1"
            android:shadowDy="1"
            android:shadowRadius="2"
            android:text="@string/jaNeeVraag"
            android:textColor="#FFFFFF"
            android:textSize="21dp" />

        <LinearLayout
            android:layout_width="20dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:background="@color/greyColor" >
        </LinearLayout>

        <RadioButton
            android:id="@+id/radioMeerKeuzeVraag"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:background="@color/greyColor"
            android:gravity="center|center_horizontal"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:shadowColor="#515151"
            android:shadowDx="1"
            android:shadowDy="1"
            android:shadowRadius="2"
            android:text="@string/meerKeuzeVraag"
            android:textColor="#FFFFFF"
            android:textSize="21dp" />

        <LinearLayout
            android:layout_width="20dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:background="@color/greyColor" >
        </LinearLayout>

        <RadioButton
            android:id="@+id/radioInvulTextVraag"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:background="@color/greyColor"
            android:gravity="center|center_horizontal"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:shadowColor="#515151"
            android:shadowDx="1"
            android:shadowDy="1"
            android:shadowRadius="2"
            android:text="@string/invulTextVraag"
            android:textColor="#FFFFFF"
            android:textSize="21dp" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp" >

            <Button
                android:id="@+id/buttonJa"
                android:layout_width="50dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:layout_marginRight="2dp"
                android:background="@color/blueColor"
                android:text="@string/one"
                android:textColor="@color/whiteColor"
                android:textSize="21dp"
                android:visibility="visible" />

            <EditText
                android:id="@+id/textViewJa"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="2.54"
                android:background="@drawable/question_d_antw_bckgr"
                android:gravity="center"
                android:inputType="text"
                android:text="@string/JA"
                android:textColor="@color/blueColor"
                android:textSize="21dp"
                android:visibility="visible" />

            <CheckBox
                android:id="@+id/checkBoxJa"
                android:layout_width="33dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:layout_marginLeft="2dp"
                android:background="@drawable/question_d_antw_bckgr"
                android:checked="true"
                android:onClick="myCheckListener"
                android:visibility="visible" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp" >

            <Button
                android:id="@+id/buttonNee"
                android:layout_width="50dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:layout_marginRight="2dp"
                android:background="@color/greyColor"
                android:text="@string/two"
                android:textColor="@color/whiteColor"
                android:textSize="21dp"
                android:visibility="visible" />

            <EditText
                android:id="@+id/textViewNee"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="2.54"
                android:background="@drawable/question_d_antw_bckgr_gray"
                android:gravity="center"
                android:inputType="text"
                android:text="@string/NEE"
                android:textColor="@color/blueColor"
                android:textSize="21dp"
                android:visibility="visible" />

            <CheckBox
                android:id="@+id/checkBoxNee"
                android:layout_width="33dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:layout_marginLeft="2dp"
                android:background="@drawable/question_d_antw_bckgr_gray"
                android:onClick="myCheckListener"
                android:visibility="visible" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp" >

            <Button
                android:id="@+id/button3"
                android:layout_width="50dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:layout_marginRight="2dp"
                android:background="@color/blueColor"
                android:text="@string/three"
                android:textColor="@color/whiteColor"
                android:textSize="21dp"
                android:visibility="invisible" />

            <EditText
                android:id="@+id/textView3"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="2.54"
                android:background="@drawable/question_d_antw_bckgr"
                android:gravity="center"
                android:inputType="text"
                android:text="@string/three"
                android:textColor="@color/blueColor"
                android:textSize="21dp"
                android:visibility="invisible" />

            <CheckBox
                android:id="@+id/checkBox3"
                android:layout_width="33dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:layout_marginLeft="2dp"
                android:background="@drawable/question_d_antw_bckgr"
                android:onClick="myCheckListener"
                android:visibility="invisible" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp" >

            <Button
                android:id="@+id/button4"
                android:layout_width="50dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:layout_marginRight="2dp"
                android:background="@color/greyColor"
                android:text="@string/four"
                android:textColor="@color/whiteColor"
                android:textSize="21dp"
                android:visibility="invisible" />

            <EditText
                android:id="@+id/textView4"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="2.54"
                android:background="@drawable/question_d_antw_bckgr_gray"
                android:gravity="center"
                android:inputType="text"
                android:text="@string/four"
                android:textColor="@color/blueColor"
                android:textSize="21dp"
                android:visibility="invisible" />

            <CheckBox
                android:id="@+id/checkBox4"
                android:layout_width="33dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:layout_marginLeft="2dp"
                android:background="@drawable/question_d_antw_bckgr_gray"
                android:onClick="myCheckListener"
                android:visibility="invisible" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp" >

            <Button
                android:id="@+id/button5"
                android:layout_width="50dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:layout_marginRight="2dp"
                android:background="@color/blueColor"
                android:text="@string/five"
                android:textColor="@color/whiteColor"
                android:textSize="21dp"
                android:visibility="invisible" />

            <EditText
                android:id="@+id/textView5"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="2.54"
                android:background="@drawable/question_d_antw_bckgr"
                android:gravity="center"
                android:inputType="text"
                android:text="@string/five"
                android:textColor="@color/blueColor"
                android:textSize="21dp"
                android:visibility="invisible" />

            <CheckBox
                android:id="@+id/checkBox5"
                android:layout_width="33dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:layout_marginLeft="2dp"
                android:background="@drawable/question_d_antw_bckgr"
                android:onClick="myCheckListener"
                android:visibility="invisible" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>